src/objects/BMCServiceDesk__Broadcast_Account_Link__c.object
<CustomObject>
    <description>This junction object stores the Broadcast IDs which are mapped to an Account.</description>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <formula>BMCServiceDesk__FKAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <description>Links to the Account object.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broadcast Account Link</relationshipLabel>
        <relationshipName>Broadcast_Account_Link</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
        <description>Links to the Broadcast object.</description>
        <label>Broadcast</label>
        <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
        <relationshipLabel>Broadcast Account Link</relationshipLabel>
        <relationshipName>Broadcast_Account_Link</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Broadcast Account Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broadcast Account Link</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>